--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -26,7 +26,7 @@
   </div>
   <main class="mdl-layout__content">
     <div class="page-content" >
-      <ng-content select="[content]"></ng-content>
+      <ng-content></ng-content>
     </div>
   </main>
 </div>
