--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,31 @@
-<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-  <input class="mdl-textfield__input" type="text" id="sample3" (input)="pesquisar($event.target.value)">
-  <label class="mdl-textfield__label" for="sample3">Pesquisar...</label>
-</div>
-
-{{search}}
 <!-- List items with avatar and action -->
 <ul class="demo-list-action mdl-list">
   <li class="mdl-list__item" *ngFor="let persona of personas; let i = index">
     <span class="mdl-list__item-primary-content">
       <i class="material-icons mdl-list__item-avatar">person</i>
-      <span>{{persona.classe}}</span>
+      <span>{{persona.nome}}</span>
       <p>{{persona.descricao}}</p>
     </span>
     <a class="mdl-list__item-secondary-action" [ngClass]="{'violet': persona.favoritado}" href="#" (click)="favoritar(i)"><i class="material-icons">star</i></a>
   </li>
-
 </ul>
+
+<h1>Busca CEP:</h1>
+
+<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+  <input class="mdl-textfield__input" type="text" id="sample3" maxlength="8" (input)="pesquisar($event.target.value)">
+  <label class="mdl-textfield__label" for="sample3">Pesquisar...</label>
+</div>
+
+{{search}}
+
+<p>Bairro: {{cepData?.bairro}}</p>
+<p>CEP: {{cepData?.cep}}</p>
+<p>Complemento: {{cepData?.complemento}}</p>
+<p>DDD: {{cepData?.ddd}}</p>
+<p>GIA: {{cepData?.gia}}</p>
+<p>IBGE: {{cepData?.ibge}}</p>
+<p>Localidade: {{cepData?.localidade}}</p>
+<p>Logradouro: {{cepData?.logradouro}}</p>
+<p>SIAFI: {{cepData?.siafi}}</p>
+<p>UF:{{cepData?.uf}}</p>
